# stock-markets-analytics-zoomcamp

./: .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
homework/module_01/: ha1_Amazon.csv  homework 1.md  my_homework.ipynb
modules/01-intro-and-data-sources/: [2025]_Module_01_Colab_Introduction_and_Data_Sources.ipynb
