[project]
name = "stock-markets-analytics-zoomcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "ipython>=9.2.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pandas-datareader>=0.10.0",
    "plotly>=6.1.2",
    "setuptools>=80.9.0",
    "setuptools-scm>=8.3.1",
    "yfinance>=0.2.61",
]
